--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 .container button {
     display: flex;
     align-items: center;
-    background: linear-gradient(#f9e79f, #fad7a0);
+    background: linear-gradient(#f2f2f2, #fad9fa);
     color: black;
     font-size: 16px;
     outline: 0;
